image alignment fixed in Choose Us component

--- a/components/Home/ChooseUs/ChooseUs.module.css
+++ b/components/Home/ChooseUs/ChooseUs.module.css
@@ -1,6 +1,5 @@
 .choose{
     padding:  100px 80px 50px 80px;
-    border: 2px solid red;
 }
 
 .main_img{
@@ -119,8 +118,8 @@
         padding: 100px 50px 50px 50px;
     }
     .main_img img{
-        width: 400px;
-        height: 180px;
+        width: 350px;
+        height: 130px;
         margin-left: -40px;
     }
     .choose_main{
